--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "run-p dev:*"
+    "dev": "run-p dev:*",
+    "dev:playground": "cd apps/playground && npm run dev"
   },
   "keywords": [],
   "author": "",
